// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match post to author 1`] = `
Object {
  "authorId": "1",
  "canonicalUrl": null,
  "comments": 0,
  "createdAt": Any<Date>,
  "creatorTwitter": "@idoshamun",
  "id": Any<String>,
  "image": null,
  "placeholder": null,
  "publishedAt": null,
  "ratio": null,
  "readTime": null,
  "score": Any<Number>,
  "sentAnalyticsReport": false,
  "shortId": Any<String>,
  "siteTwitter": null,
  "sourceId": "a",
  "tagsStr": null,
  "title": "Title",
  "tweeted": false,
  "upvotes": 0,
  "url": "https://post.com",
  "views": 0,
  "viewsThreshold": 0,
}
`;

exports[`should not match post to author 1`] = `
Object {
  "authorId": null,
  "canonicalUrl": null,
  "comments": 0,
  "createdAt": Any<Date>,
  "creatorTwitter": "@nouser",
  "id": Any<String>,
  "image": null,
  "placeholder": null,
  "publishedAt": null,
  "ratio": null,
  "readTime": null,
  "score": Any<Number>,
  "sentAnalyticsReport": true,
  "shortId": Any<String>,
  "siteTwitter": null,
  "sourceId": "a",
  "tagsStr": null,
  "title": "Title",
  "tweeted": false,
  "upvotes": 0,
  "url": "https://post.com",
  "views": 0,
  "viewsThreshold": 0,
}
`;

exports[`should save a new post with basic information 1`] = `
Object {
  "authorId": null,
  "canonicalUrl": null,
  "comments": 0,
  "createdAt": Any<Date>,
  "creatorTwitter": null,
  "id": Any<String>,
  "image": null,
  "placeholder": null,
  "publishedAt": null,
  "ratio": null,
  "readTime": null,
  "score": Any<Number>,
  "sentAnalyticsReport": true,
  "shortId": Any<String>,
  "siteTwitter": null,
  "sourceId": "a",
  "tagsStr": null,
  "title": "Title",
  "tweeted": false,
  "upvotes": 0,
  "url": "https://post.com",
  "views": 0,
  "viewsThreshold": 0,
}
`;

exports[`should save a new post with full information 1`] = `
Object {
  "authorId": null,
  "canonicalUrl": null,
  "comments": 0,
  "createdAt": Any<Date>,
  "creatorTwitter": "creator",
  "id": Any<String>,
  "image": "https://image.com",
  "placeholder": "data:image/jpeg;base64,placeholder",
  "publishedAt": 2020-06-11T01:17:00.000Z,
  "ratio": 2,
  "readTime": 5,
  "score": Any<Number>,
  "sentAnalyticsReport": true,
  "shortId": Any<String>,
  "siteTwitter": "site",
  "sourceId": "a",
  "tagsStr": "javascript,html",
  "title": "Title",
  "tweeted": false,
  "upvotes": 0,
  "url": "https://post.com",
  "views": 0,
  "viewsThreshold": 0,
}
`;

exports[`should save a new post with full information 2`] = `
Array [
  PostTag {
    "tag": "webdev",
  },
  PostTag {
    "tag": "javascript",
  },
  PostTag {
    "tag": "html",
  },
]
`;
